<resources>
    <string name="app_name">Medication List</string>
    <string name="title_activity_medication">Medication</string>
    <string name="title_activity_mediction_dosage">Dosage</string>
    <string name="title_activity_name">Name</string>
    <string name="title_activity_family_member_list">Family member list</string>
    <string name="title_activity_physician_list">Physician list</string>
    <string name="title_activity_main">Medication Management</string>
    <string name="title_activity_family_member">Family member info</string>
    <string name="title_activity_physician">Physician info</string>
    <string name="title_activity_family_member2">FamilyMember2</string>
    <string name="title_activity_image_display">Medication images</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_sort_family">Sort by family member</string>
    <string name="action_sort_physician">Sort by physician</string>
    <string name="action_sort_all">Sort all</string>
    <string name="action_save">Save</string>
    <string name="action_delete_family">Delete family member</string>
    <string name="action_delete_physician">Delete physician</string>
    <string name="medication_name">Generic name</string>
    <string name="medication_route">Route</string>
    <string name="medication_form">Form</string>
    <string name="medication_strength">Strength</string>
    <string name="medication_quantity">Quantity</string>
    <string name="medication_physician">Physician</string>
    <string name="medication_pharmacy">Pharmacy</string>
    <string name="medication_prescription_number">Prescription number</string>
    <string name="medication_note">Note</string>
    <string name="medication_prescription_label">Prescription label</string>
    <string name="medication_medication_image">Medication image</string>
    <string name="medication_family_member">Family member</string>
    <string name="medication_unit">Unit</string>
    <string name="name_nameprefix">Name prefix (optional)</string>
    <string name="name_firstname">First name</string>
    <string name="name_middlename">Middle name</string>
    <string name="name_lastname">Last name</string>
    <string name="name_namesuffix">Name suffix (optional)</string>
    <string name="name_title">Name of</string>
    <string name="place_holder">text goes here</string>
    <string name="medication_list_for">For </string>
    <string name="medication_list_from">Physician </string>
    <string name="medication_list_detail_qty">Qty: </string>
    <string name="not_specified">Not specified</string>
    <string name="name_not_specified">Name was not entered.</string>

    <string name="main_medication_tv">Medications</string>
    <string name="main_family_member_tv">Family members</string>
    <string name="main_physician_tv">Physicians</string>

    <string name="family_member_name">Family member</string>
    <string name="family_member_birthday">Birthday</string>
    <string name="family_member_gender">Gender</string>
    <string name="family_member_height">Height</string>
    <string name="family_member_weight">Weight</string>
    <string name="family_member_blood_type">Blood type</string>

    <string name="physician_name">Physician</string>

    <string name="dialog_select_gender">Select gender</string>
    <string name="height_dialog_feet">Feet</string>
    <string name="height_dialog_inches">Inches</string>
    <string name="dialog_male">Male</string>
    <string name="dialog_female">Female</string>
    <string name="enter_height">Enter height</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_ok_to_dial">OK to dial call?</string>
    <string name="enter_weight">Enter weight</string>
    <string name="dialog_kilogram">Kg</string>
    <string name="dialog_pounds">Lbs</string>
    <string name="physician_specialty">Specialty</string>
    <string name="physician_phone">Phone</string>
    <string name="dialog_weight">Weight</string>
    <string name="weight_hint">120</string>
    <string name="enter_specialty">Enter physician specialty</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="no_phone">No phone on file</string>
    <string name="phone_button">phone button</string>

    <string name="med_brand_name_label">Brand name</string>
    <string name="med_mfg_label">Mfg</string>
    <string name="med_take_inst_label">Take</string>
    <string name="med_take_inst_hint">i.e. 1 twice daily</string>
    <string name="medication_list_generic">Generic:</string>
    <string name="medication_list_brand">Brand:</string>
    <string name="medication_list_detail_strength">Strength:</string>
    <string name="medication_list_detail_instr_label">Instruction:</string>
    <string name="medication_not_entered_msg">Please enter name of medication</string>
    <string name="family_list_birthday_label">Birthday:</string>
    <string name="family_list_gender_label">Gender:</string>
    <string name="name_not_entered_msg">Name was not entered</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="state">State</string>
    <string name="fax_physician">Fax</string>
    <string name="physician_email_label">Email</string>
    <string name="fax_number_label">Fax</string>
    <string name="enter_fax_number">Enter fax number</string>
    <string name="enter_email">Enter email</string>

    <string name="preference_file_key">reminder_test</string>
    <string name="saved_calendar_id">cal_id</string>
    <string name="saved_account_name">account_name</string>
    <string name="saved_account_owner">account_owner</string>
    <string name="saved_display_name">display_name</string>
    <string name="cal_account_name">com.lsdinfotech.medlist</string>
    <string name="cal_display_name">Medication Reminders</string>
    <string name="cal_account_owner">medlist@lsdinfotech.com</string>
    <string name="main_reminders">Reminders</string>
    <string name="main_title">Medication Management</string>
    <string name="reminder_type_daily">Daily</string>
    <string name="reminder_type_hourly">Hourly</string>
    <string name="reminder_type_weekly">Weekly</string>
    <string name="reminder_type_monthly">Monthly</string>
    <string name="reminder_type_yearly">Yearly</string>
    <string name="reminder_type_specific_date">Specific date</string>
    <string name="occurrence_is">Occurrence is:</string>
    <string name="occurs_every">Repeats every (opt)</string>
    <string name="number_of_occurrences">Number of occurrences (opt)</string>
    <string name="occurs_on">Occurs:</string>
    <string name="date">Date</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="days_to_occur">Days to occur (opt)</string>
    <string name="reminder_name">Reminder name</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="placeholder_00_00_am">00:00 AM</string>
    <string name="reminder_input_repeat">How often to repeat</string>
    <string name="reminder_activity_verify_msg">Complete all enteries</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_reminder_list_activity">Reminder List</string>
    <string name="title_activity_specific_reminder">Specific date reminder</string>
    <string name="start_date">Start date</string>
    <string name="reminder_until_date">Until date (opt)</string>
    <string name="reminder_input_until">Reminder until (opt)</string>
    <string name="reminder_input_until_msg">Set date or clear date</string>
    <string name="action_new">NEW</string>
    <string name="days_to_occur_label_na">Days to occur (not applicable)</string>
    <string name="help_label">Help</string>
    <string name="app_version">Version: 1.0.0</string>
    <string name="contact_us">Contact Us</string>
</resources>
