<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/screen_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lsdinfotech.medicationlist.NameActivity"
    tools:showIn="@layout/activity_name">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/name_title_margin"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_title"
                android:textSize="@dimen/name_title_textsize"
                android:text="@string/name_title"
                android:padding="@dimen/textview_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Name prefix -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/textview_padding"
                android:text="@string/name_nameprefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/name_prefix"
                android:inputType="text"
                android:lines="1"
                android:textSize="@dimen/edittext_textsize"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- First name -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/textview_padding"
                android:text="@string/name_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/name_first_name"
                android:inputType="text"
                android:lines="1"
                android:textSize="@dimen/edittext_textsize"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Middle name -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/textview_padding"
                android:text="@string/name_middlename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/name_middle_name"
                android:inputType="text"
                android:lines="1"
                android:textSize="@dimen/edittext_textsize"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Last name -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/textview_padding"
                android:text="@string/name_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/name_last_name"
                android:inputType="text"
                android:lines="1"
                android:textSize="@dimen/edittext_textsize"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Name suffix -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/textview_padding"
                android:text="@string/name_namesuffix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/name_suffix"
                android:inputType="text"
                android:lines="1"
                android:textSize="@dimen/edittext_textsize"
                android:textColor="@color/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
