<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="@dimen/screen_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lsdinfotech.medicationlist.SpecificReminderActivity"
    tools:showIn="@layout/activity_specific_reminder">

    <TextView
        android:text="@string/reminder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/specific_reminder_name"
        android:inputType="text"
        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- time -->
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/time"
            android:padding="@dimen/textview_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/specific_reminder_time"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:layout_weight=".9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="InefficientWeight" />

            <ImageButton
                android:id="@+id/specific_reminder_time_btn"
                style="@style/down_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background= "@drawable/divider_line_2"/>


    </LinearLayout>

    <!-- Date -->
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/date"
            android:padding="@dimen/textview_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/specific_reminder_date"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:layout_weight=".9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="InefficientWeight" />

            <ImageButton
                android:id="@+id/specific_reminder_date_btn"
                style="@style/down_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>


